--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-fluid-scroll": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.8",
     "react-simple-image-viewer": "^1.2.2",
     "smooth-scrollbar": "^8.8.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1.8.0",
